# repomap

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  MEMORY.md  PROGRESS.md  README.md  README_JA.md  TASKS.md  pyproject.toml  requirements.txt
scripts/: cli.py  run_tests.py
src/repomap/: __init__.py  cli.py  map_generator.py
tests/: test_map_generator.py
